src/styles/subsocial.scss
/* ... */
.ant-list-something-after-last-item .ant-spin-container > .ant-list-items > .ant-list-item:last-child {
  border: none;
}

.ellipsis {
  text-overflow: ellipsis;

  /* Required for text-overflow to do anything */
  white-space: nowrap;
  overflow: hidden;
}

.DfSubMenu {
  color: rgba(0, 0, 0, .85);
}
.DfMenuItem {
  img{
    transition: filter 0.3s;
    filter: grayscale(1) opacity(0.7);
  }
  svg{
    transition: filter 0.3s;
    filter: grayscale(1) opacity(0.7);
  }
  &.ant-menu-item-only-child:hover,
  .ant-menu-submenu-title:hover,
  &.ant-menu-submenu-selected,
  &.ant-menu-item-selected {
    img{
      transition: filter 0.3s;
      filter: grayscale(0) opacity(1);
    }
    svg{
      color: $color_primary;
      transition: filter 0.3s;
      filter: grayscale(0) opacity(1);
    }
  }
}

.DfTopBar {
  position: fixed;
  z-index: 2;
  height: $height_top_menu;
  width: 100%;
  padding: $space_normal;
  display: flex;
  justify-content: space-between;
  // padding: 0.75rem;
  border-bottom: 1px solid #ddd;
  background-color: #fff;
  align-items: center;

  .DfCloseSearchIcon {
    padding-left: $space_tiny;
  }

  .DfTopBar--searchBar {
    position: absolute;
    width: 100%;
    padding-left: 190px;
    justify-content: center;
  }

  @media screen and (max-width: 992px) {
    .DfTopBar--searchBar {
      padding-left: 0;
    }
  }
  .DfTopBar--leftContent {
    z-index: 200;
    min-width: 13rem;
  }
  .DfTopBar--leftContent,
  .DfTopBar--rightContent,
  .DfTopBar--search {
    display: flex;
    align-items: center;
  }

  .DfTopBar--rightContent {
    min-width: 17.875rem;
    justify-content: flex-end;
    z-index: 100;
  }

}


/* Fix syntax error in Markdown editor */
.CodeMirror .cm-spell-error:not(.cm-url):not(.cm-comment):not(.cm-tag):not(.cm-word) {
  background: none !important;
}

// a.DfStatItem {
//   color: $color_muted !important;
// }

.DfStatItem {
  color: $color_muted !important;
  font-size: $font_normal;
  margin-right: $space_large;
  display: inline-block;

  &:hover {
    color: $color_link !important;
  }
}

.DfSpaceTitle {
  margin-bottom: $space_small;

  a {
    @extend .DfBlackLink;
  }

  .ui.dropdown {
    margin-left: $space_tiny;
  }
}

.DfModal {
  text-align: left;
  margin: 1rem;

  content {
    min-width: 75%;
  }
}

.NavEditorWrapper {
  display: flex;
  justify-content: space-between;
}

.NavigationEditor .NERow {
  display: flex;
  justify-content: space-between;
  margin-left: 0;
  margin-bottom: $space_big;
  position: relative;
  flex-direction: column;
  border-bottom: 1px solid $color_light_border;
}

.NavigationEditor .NERow:last-child {
  border-bottom: none;
}

.NavigationEditor .NEText {
  color: $color_font_normal;
  font-style: normal;
  font-weight: 500;
  font-size: $font_normal;
  margin-right: $space_huge;
  width: 16rem;
  margin-top: $space_big;
}

.NavigationEditor .NavigationEditorForm {
  display: flex;
  flex-direction: column;
}

.NavigationEditor .NavigationEditorForm input,
.NavigationEditor .NavigationEditorForm select {
  margin-right: $space_huge !important;
  height: 3rem !important;
}

.NavigationEditor .NESelectType {
  width: 50%;
}

.NavigationEditor .NavigationEditorForm .NEHidden {
  input,
  select {
    color: $color_muted !important;
  }
}

.NavigationEditor .NEButtonsWrapper {
  display: flex;
  flex-direction: column;
  margin: $space_huge 0;
}

.NavigationEditor .NERemoveButton button:hover {
  background-color: #ff0000;
  border-color: #d9d9d9;

  span {
    color: #fff;
  }
}

.NavigationEditor .NEHideButton {
  margin-bottom: $space_normal;

  button {
    margin-right: $space_huge;
  }
}

.NavigationEditor .NEAddTab {
  @extend .DfLinkOnHover;
  background-color: #fff;
  display: flex;
  border-radius: 0.28571429rem;
  line-height: 1.21428571rem;
  padding: 0.67857143rem 1rem;
  max-width: 15.2rem;
  width: 100%;
  justify-content: center;
  border: 1px dashed #d9d9d9;
}

.NavigationEditor .NESubmit {
  max-width: 8.5rem;
  width: 100%;

  span {
    color: #fff !important;
  }
}

.NavigationEditor .NETagsWrapper {
  width: 100%;

  input {
    height: $space_big !important;
  }
}

.NavigationEditor .NEErrorMessage {
  position: absolute !important;
  top: 5.5rem;
  left: 6rem;
}

.NavigationEditor .NEAutoCompleteItem {
  position: absolute;
}

.RNTListItem {
  padding: 0 $space_normal;

  &:hover {
    background-color: #eee;
    border-radius: $border_radius_normal;
  }

  .ant-list-item-meta-title {
    font-weight: bold !important;
  }
}

.RNTIcon {
  transform: rotate(90deg);
  margin-right: $space_normal;
  color: #ccc;
}

.SpaceNav {
  .SNhead {
    display: flex;
    flex-direction: column;
    padding: $space_big;
    background-color: #fff;
    border: 1px solid $color_light_border;
    box-sizing: border-box;
    border-radius: $border_radius_normal;
    margin: 0 0 $space_big 0;
    padding: $space_big;

    .SNavatar {
      margin: auto;

      img {
        width: 100%;
        border-radius: 10rem;
      }
    }

    .SNheadTitle {
      font-weight: 500;
      font-size: $font_big;
      line-height: $space_huge;
      margin: $space_normal 0;
      text-align: center;
    }

    .SNheadDescription {
      margin-top: $space_normal;
    }

    .SNheadButton {
      margin: auto;

      &.unfollowed span {
        color: #fff;
      }
    }
  }

  .SNmenu {
    border: 1px solid $color_light_border;
    box-sizing: border-box;
    border-radius: $border_radius_normal;
    margin-bottom: $space_big;
    width: 100% !important;
  }

  .SpaceNavSettings {
    display: flex;
    justify-content: flex-end;
    margin: $space_tiny;

    a {
      @extend .DfBlackLink;
    }
  }
}
/* ... */

